#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.66])
AC_INIT(helloclear, 8, arjan@linux.intel.com)
AM_INIT_AUTOMAKE([foreign -Wall -W])
AM_SILENT_RULES([yes])
AC_PROG_CC
AC_LANG(C)
AC_CONFIG_HEADERS([config.h])


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
